Refactor code Override equals and hashcode for user and role